[gd_scene load_steps=2 format=3 uid="uid://djav2lr1lidc1"]

[ext_resource type="Script" path="res://Scripts/Multiplayer.gd" id="1_ykv8h"]

[node name="MultiplayerSceen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_ykv8h")

[node name="HostButton" type="Button" parent="."]
offset_left = 1168.0
offset_top = 428.0
offset_right = 1212.0
offset_bottom = 459.0
text = "Host"

[node name="JoinButton" type="Button" parent="."]
offset_left = 1163.0
offset_top = 485.0
offset_right = 1207.0
offset_bottom = 516.0
text = "Join"

[connection signal="pressed" from="HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_join_button_pressed"]
